# sportipy

./: .gitignore  README.md  pyproject.toml  requirements.txt
sportipy/: utils.py
sportipy/importer/: utils.py
sportipy/importer/strava/: summary_importer.py
tests/: test_utils.py
tests/importer/strava/: test_summary_importer.py
tests/importer/strava/resources/: README.md
tests/importer/strava/resources/export_123/: activities.csv
tests/importer/strava/resources/export_123/activities/: 1.gpx  2.gpx
