[build-system]
requires = [
    "setuptools >= 65.0.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "sportipy"
version = "0.0.1"
description = "Library for analyzing and plotting sport activity data"
authors = [
    {name = "Markus Heikkinen", email="markusheikkn@gmail.com"},
]
requires-python = ">=3.9"
keywords = ["strava"]
classifiers = [
    "Topic :: Software Development",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "gpxpy==1.6.2",
    "pandas",
    "fit2gpx==0.0.7",
    # fit2gpx fails on fitdecode warning, therefore a temporary fork is needed. https://github.com/polyvertex/fitdecode/issues/10
    "fitdecode@git+https://github.com/mechengdev/fitdecode"
]

[tool.setuptools]
packages = ["sportipy"]

[tool.pytest.ini_options]
testpaths = "tests"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
